kubernetes/apps/servarr/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: servarr
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
      sectionName: http-public
    - name: eg-public
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - "jellyfin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: servarr-jellyfin
          port: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: servarr
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: http-admin
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "jellyseerr.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: servarr-jellyseerr
          port: 5055
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: servarr
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: http-admin
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "prowlarr.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: servarr-prowlarr
          port: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: servarr
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: http-admin
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "sonarr.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: servarr-sonarr
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: servarr
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: http-admin
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "radarr.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: servarr-radarr
          port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: servarr
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: http-admin
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "qbittorrent.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: servarr-qbittorrent-web
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: servarr
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: http-admin
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "bazarr.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: servarr-bazarr
          port: 6767
