kubernetes/apps/servarr/templates/jellyfin-ratelimit.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-login
  namespace: servarr
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - "jellyfin.michaelmuzafarov.dev"
  rules:
    - matches:
        # Documentation: https://api.jellyfin.org/#tag/User/operation/AuthenticateUserByName
        - path:
            type: RegularExpression
            value: "(?i)/Users/AuthenticateByName"
      backendRefs:
        - name: servarr-jellyfin
          port: 8096
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: jellyfin-login-ratelimit
  namespace: servarr
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: jellyfin-login
  rateLimit:
    local:
      rules:
        - limit:
            requests: 5
            unit: Minute
