kubernetes/apps/servarr/templates/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-from-envoy-gateway
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
